# aio-gap-miner

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PAPER.md  README.md  pyproject.toml  queries.example.txt  requirements.txt
data/sample/: aio_citations_sample.csv
notebooks/: 01_gap_miner_baseline.ipynb
reports/: metrics.json
reports/results/: artifact_audit.csv  cited_videos.csv  definitive_analysis.csv  domain_citation_ranked_only.csv  domain_leaderboard_conditional.csv  final_bootstrap.csv  final_calibration.csv  final_generalisation.csv  final_holdout.csv  final_population.csv  final_robustness.csv  generalisation_test.csv  hardening_holdout_variant_A.csv  hardening_holdout_variant_B.csv  hardening_permutation_variant_A.csv  hardening_permutation_variant_B.csv  hardening_shap_stability_variant_A.csv  hardening_shap_stability_variant_B.csv  headline_comparison.csv  label_validation.csv  model_comparison_variant_A.csv  model_comparison_variant_B.csv  paa_cluster_summary.csv  passage_matches_ngram.csv  passage_pattern_summary.csv  passage_traits_ngram.csv  query_segment_summary.csv  query_segment_summary_corrected.csv  rebuild_report.csv  shap_importance_variant_A.csv  shap_importance_variant_B.csv  structure_association.csv  video_alignment.csv  video_transcript_reuse.csv  youtube_citations_corrected.csv  youtube_summary_corrected.csv
scripts/: analyze_aio_overlap.py  analyze_domains.py  analyze_insights.py  analyze_paa.py  analyze_passage_patterns.py  analyze_passages.py  analyze_passages_v2.py  analyze_query_intent.py  analyze_video_alignment.py  analyze_video_reuse.py  audit_artifacts.py  build_business_cases.py  build_database.py  build_headline_figures.py  build_notebook.py  collect_real_data.py  export_tableau.py  extract_from_cache.py  fetch_transcripts_ytdlp.py  fetch_youtube_transcripts.py  fix_descriptive_stats.py  generate_sample_data.py  harden_model.py  patch_config_leakage.py  prepare_tableau.py  rebuild_labels.py  recount_youtube.py  run_definitive_analysis.py  run_final_analysis.py  run_headline_comparison.py  run_pipeline.py  run_variants.py  test_generalisation.py  validate_labels.py  verify_setup.py
src/aio_gap_miner/: __init__.py  config.py  config.py.bak  data.py  database.py  evaluate.py  explain.py  feature_sets.py  features.py  features.py.bak  model.py  stats.py
src/aio_gap_miner/collect/: __init__.py  crawl.py  keywords.py  pipeline.py  serp.py
tableau/: README.md  aio_gap_miner_tableau.csv
tests/: test_collect.py  test_features.py  test_pipeline.py
tests/fixtures/: serp_sample.json
