[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-gap-miner"
version = "0.2.0"
description = "Supervised, explainable prediction of which URLs get cited in Google AI Overviews."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fabian" }]
keywords = ["seo", "geo", "aio", "ai-overviews", "machine-learning", "shap", "lightgbm"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.10",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
notebook = ["jupyter", "nbformat", "nbconvert", "ipykernel"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
