[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aio-gap-miner"
version = "0.3.0"
description = "Supervised, explainable prediction of which URLs get cited in Google AI Overviews."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fabian Pott" }]
keywords = ["seo", "geo", "aio", "ai-overviews", "machine-learning", "shap", "lightgbm"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.10",
    "SQLAlchemy>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "textstat>=0.7",
]

[project.optional-dependencies]
notebook = ["jupyter", "nbformat", "nbconvert", "ipykernel"]
embeddings = ["sentence-transformers>=2.2"]  # optional: true semantic similarity
dev = ["pytest>=7.0", "ruff>=0.6", "deptry>=0.20", "pre-commit>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes, I = isort, UP = pyupgrade, B = flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.deptry]
known_first_party = ["aio_gap_miner"]

[tool.deptry.per_rule_ignores]
# Dev / notebook tooling used via the CLI, not imported in package code.
# lxml is BeautifulSoup's parser backend -- used at runtime, never imported directly.
DEP002 = ["jupyter", "nbconvert", "ipykernel", "pytest", "ruff", "deptry", "pre-commit", "lxml"]
